{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 39,
  "lineage": "d137765b-312f-3bd9-1a20-0e03954421cf",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0652a081025ec9fee",
            "arn": "arn:aws:ec2:eu-west-1:889913637903:instance/i-077a7159427c6737a",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-077a7159427c6737a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0b10e88655e77e203",
            "private_dns": "ip-10-0-0-31.eu-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.31",
            "public_ip": "52.18.32.243",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0d1201d0e1545ae3b",
                "volume_size": 10,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c95fd008044411f1",
            "tags": {
              "CostCenter": "1234",
              "ManagedBy": "Terraform",
              "Name": "06-resources-ec2",
              "Project": "06-resources"
            },
            "tags_all": {
              "CostCenter": "1234",
              "ManagedBy": "Terraform",
              "Name": "06-resources-ec2",
              "Project": "06-resources"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c167602203d0fd8d"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.public_http_traffic",
            "aws_subnet.public",
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:889913637903:internet-gateway/igw-094a3f2089d0b7280",
            "id": "igw-094a3f2089d0b7280",
            "owner_id": "889913637903",
            "tags": {
              "CostCenter": "1234",
              "ManagedBy": "Terraform",
              "Name": "06-resources-main",
              "Project": "06-resources"
            },
            "tags_all": {
              "CostCenter": "1234",
              "ManagedBy": "Terraform",
              "Name": "06-resources-main",
              "Project": "06-resources"
            },
            "vpc_id": "vpc-0ff222cccfd4ee299"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:889913637903:route-table/rtb-085c84211a338c502",
            "id": "rtb-085c84211a338c502",
            "owner_id": "889913637903",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-094a3f2089d0b7280",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "CostCenter": "1234",
              "ManagedBy": "Terraform",
              "Name": "06-resources-main",
              "Project": "06-resources"
            },
            "tags_all": {
              "CostCenter": "1234",
              "ManagedBy": "Terraform",
              "Name": "06-resources-main",
              "Project": "06-resources"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ff222cccfd4ee299"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0678795f20365d7bc",
            "route_table_id": "rtb-085c84211a338c502",
            "subnet_id": "subnet-0c95fd008044411f1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public_http_traffic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:889913637903:security-group/sg-0c167602203d0fd8d",
            "description": "Security group allowing traffic on ports 443 and 80",
            "egress": [],
            "id": "sg-0c167602203d0fd8d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "public-http-traffic",
            "name_prefix": "",
            "owner_id": "889913637903",
            "revoke_rules_on_delete": false,
            "tags": {
              "CostCenter": "1234",
              "ManagedBy": "Terraform",
              "Name": "06-resources-sg",
              "Project": "06-resources"
            },
            "tags_all": {
              "CostCenter": "1234",
              "ManagedBy": "Terraform",
              "Name": "06-resources-sg",
              "Project": "06-resources"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ff222cccfd4ee299"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:889913637903:subnet/subnet-0c95fd008044411f1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c95fd008044411f1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "889913637903",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "CostCenter": "1234",
              "ManagedBy": "Terraform",
              "Name": "06-resources-public",
              "Project": "06-resources"
            },
            "tags_all": {
              "CostCenter": "1234",
              "ManagedBy": "Terraform",
              "Name": "06-resources-public",
              "Project": "06-resources"
            },
            "vpc_id": "vpc-0ff222cccfd4ee299"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:889913637903:vpc/vpc-0ff222cccfd4ee299",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-067912ab5033986ec",
            "default_route_table_id": "rtb-0a8b1ff8dfdeac097",
            "default_security_group_id": "sg-0b30fae3813df5520",
            "dhcp_options_id": "dopt-0e27c9e9ccf322cba",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ff222cccfd4ee299",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a8b1ff8dfdeac097",
            "owner_id": "889913637903",
            "tags": {
              "CostCenter": "1234",
              "ManagedBy": "Terraform",
              "Name": "06-resources",
              "Project": "06-resources"
            },
            "tags_all": {
              "CostCenter": "1234",
              "ManagedBy": "Terraform",
              "Name": "06-resources",
              "Project": "06-resources"
            }
          },
          "identity_schema_version": 0,
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:889913637903:security-group-rule/sgr-0b07566c7815f70e1",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-0b07566c7815f70e1",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0c167602203d0fd8d",
            "security_group_rule_id": "sgr-0b07566c7815f70e1",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.public_http_traffic",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:889913637903:security-group-rule/sgr-0dfd75c20c1e38f99",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 443,
            "id": "sgr-0dfd75c20c1e38f99",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0c167602203d0fd8d",
            "security_group_rule_id": "sgr-0dfd75c20c1e38f99",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.public_http_traffic",
            "aws_vpc.main"
          ]
        }
      ]
    }
  ]
}